# Agent-First-Organization

./: .env  .gitignore  LICENSE.md  README.md  create.py  eval.py  model_api.py  pyproject.toml  requirements.txt  run.py  script.py  tau_bench_eval.py  tau_bench_result_analysis.py  test.sh
.github/: pull_request_template.md
.github/workflows/: pr-check.yml  release.yml  test-resources.yml
.gitihub/: CODEOWNERS
agentorg/: types.py
agentorg/agents/: README.md  agent.py  database_agent.py  default_agent.py  message.py  message_agent.py  prompts.py  question_agent.py  rag_agent.py  rag_message_agent.py  search_agent.py
agentorg/env/: env.py  prompts.py
agentorg/evaluation/: README.md  build_user_profiles.py  chatgpt_utils.py  extract_conversation_info.py  full_eval.py  get_documents.py  simulate_first_pass_convos.py  simulate_second_pass_convos.py
agentorg/orchestrator/: README.md  base.py  orchestrator.py  prompts.py  task_graph.py
agentorg/scripts/: load_documents.py
agentorg/tools/: __init__.py  sample_tools.py  tools.py  utils.py
agentorg/utils/: graph_state.py  loader.py  model_provider_config.py  model_safety.py  mysql.py  trace.py  utils.py
agentorg/workers/: database_worker.py  default_worker.py  message_worker.py  prompts.py  rag_message_worker.py  rag_worker.py  search_worker.py  worker.py
arklex/: __init__.py  exceptions.py
arklex/env/: env.py  prompts.py
arklex/evaluation/: build_user_profiles.py  chatgpt_utils.py  extract_conversation_info.py  get_documents.py  simulate_first_pass_convos.py  simulate_second_pass_convos.py  user_attributes.json
arklex/orchestrator/: orchestrator.py  orchestrator_new.py  prompts.py  task_graph.py  task_graph_new.py
arklex/utils/: graph_state.py  loader.py  model_config.py  model_provider_config.py  slot.py  trace.py  utils.py
benchmark/tau_bench/: __init__.py  auto_error_identification.py  run.py  tau_bench_eval.py  tau_bench_result_analysis.py  types.py
docs/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: Config.md  MessageState.md  Tools.md  intro.md
examples/: booking_assistant_config.json  booking_assistant_tool_config.json  customer_service_config.json  phonefixing_assistant_config.json  roleplay.json  syllabus_assistant.json  syllabus_asssistant.json
examples/acuity/: taskgraph.json
examples/booking_assistant_tool/: task_documents.pkl  taskgraph.json  taskplanning.json
examples/calendar/: taskgraph.json  test.py  test_cases.json
examples/customer_service/: chunked_documents.pkl  documents.pkl  task_documents.pkl  taskgraph.json  taskplanning.json
examples/hitl_local/: taskgraph.json
examples/hitl_server/: taskgraph.json  test.py  test_cases.json
examples/hubspot/: taskgraph.json  test.py  (+1 more)
results/: agent-first-org-gpt-4o-0.0_range_0--1_user-gpt-4o-llm_0205162701.json  agent-first-org-gpt-4o-0.0_range_0--1_user-gpt-4o-llm_0205172101.json  agent-first-organization_range-0--1_user-gpt-4o-llm_0205184917.json  agent-first-organization_range-0--1_user-gpt-4o-llm_0205185811.json
tau_bench/: auto_error_identification.py  run.py
tests/: ecommerce_testset.json  test_resources.py  utils_shopify_tools.py  utils_workers.py
(+386 files in other folders)
